--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.3.1",
+    "axios": "^1.7.9",
     "discord.js-selfbot-v13": "^3.6.0",
+    "dotenv": "^16.4.7",
     "firebase-admin": "^13.1.0",
     "openai": "^4.85.1",
     "prisma": "^6.3.1",
@@ -36,6 +38,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
